GitVersion1/objects/Planning_Month__c.object
<CustomObject>
    <fields>
        <fullName>ASM_JFW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASM JFW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_End_Date__c</fullName>
        <label>Activity_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Planning_Months</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Planning_Months1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Planned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Half__c</fullName>
        <label>First Half</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>Group Meeting,</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Transit</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Branch Visit</fullName>
                </value>
                <value>
                    <fullName>Regional Office</fullName>
                </value>
                <value>
                    <fullName>Dog Show</fullName>
                </value>
                <value>
                    <fullName>Exhibition</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>On Field</fullName>
                    <isActive>false</isActive>
                    <label>On Field</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Comments__c</fullName>
        <label>Individual Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <formula>TEXT(Owner:User.Line_Of_Business__c)</formula>
        <label>Line Of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_End_Date__c</fullName>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Index__c</fullName>
        <formula>CASE(text(Month_Planned__c),
&quot;January&quot;,1,
&quot;February&quot;,2,
&quot;March&quot;,3,
&quot;April&quot;,4,
&quot;May&quot;,5,
&quot;June&quot;,6,
&quot;July&quot;,7,
&quot;August&quot;,8,
&quot;September&quot;,9,
&quot;October&quot;,10,
&quot;November&quot;,11,
&quot;December&quot;,12,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Planned__c</fullName>
        <label>Month Planned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month_Start_Date__c</fullName>
        <label>Month Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_days_missed__c</fullName>
        <formula>Number_of_Working_Days__c- Days_Planned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of days missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Working_Days__c</fullName>
        <formula>if(Working_Days_Per_week__c==7,(Month_End_Date__c  - Month_Start_Date__c)+1,
CASE(MOD(  Month_Start_Date__c  - DATE(1985,6,24),7), 

  0 , CASE( MOD( Month_End_Date__c- Month_Start_Date__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Month_End_Date__c - Month_Start_Date__c  ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Month_End_Date__c- Month_Start_Date__c  ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Month_End_Date__c- Month_Start_Date__c  ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Month_End_Date__c - Month_Start_Date__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Month_End_Date__c - Month_Start_Date__c  ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Month_End_Date__c - Month_Start_Date__c   ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR((  Month_End_Date__c  - Month_Start_Date__c  )/7)* Working_Days_Per_week__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_JFW__c</fullName>
        <label>Other JFW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanDay_UniqueKey__c</fullName>
        <label>PlanDay_UniqueKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Date__c</fullName>
        <label>Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Day_Unique_Key_For_DupRule__c</fullName>
        <description>Unique key used for finding duplicates. Populated by the trigger. Used in Duplicate rule</description>
        <label>Plan Day Unique Key For DupRule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Month_Unique_Key__c</fullName>
        <label>Plan Month Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSM_JFW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSM_JFW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>text( Owner:User.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Planning_Month__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Planning Month</label>
        <referenceTo>Planning_Month__c</referenceTo>
        <relationshipLabel>Planned Days</relationshipLabel>
        <relationshipName>Planning_Months</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Planning Months</relationshipLabel>
        <relationshipName>Planning_Months</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Half__c</fullName>
        <label>Second Half</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>Group Meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Transit</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Branch Visit</fullName>
                </value>
                <value>
                    <fullName>Regional Office</fullName>
                </value>
                <value>
                    <fullName>Dog Show</fullName>
                </value>
                <value>
                    <fullName>Exhibition</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Open&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_s_Comments__c</fullName>
        <label>Supervisor&apos;s Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Planning Months</relationshipLabel>
        <relationshipName>Planning_Months</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TerritoryId__c</fullName>
        <formula>if(RecordType.Name ==$Label.Cres_Plan_DayRecType &amp;&amp;  Related_Planning_Month__r.Target__c!=null,Related_Planning_Month__r.Target__c,
if(RecordType.Name == $Label.Cres_PlanMonthRecType  &amp;&amp;  Target__c!=null,Target__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TerritoryId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <formula>Target__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <formula>Owner:User.User_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSA_JFW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VSA_JFW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_Days_Per_week__c</fullName>
        <label>Working Days Per week</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isReadOnly__c</fullName>
        <formula>if(RecordType.Name ==$Label.Cres_PlanMonthRecType &amp;&amp; OR(ISPICKVAL(Status__c,&apos;In Progress&apos;),ISPICKVAL(Status__c,&apos;Open&apos;),ISPICKVAL(Status__c,&apos;Rejected&apos;)),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <label>Planning Month</label>
    <listViews>
        <fullName>CPN_India_AH_Dairy_Planning_Month</fullName>
        <filterScope>Queue</filterScope>
        <label>CPN India - AH Dairy</label>
        <queue>CPN_India_AH_Dairy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPN_India_AH_Pet_Care_Planning_Month</fullName>
        <filterScope>Queue</filterScope>
        <label>CPN India - AH Pet Care</label>
        <queue>CPN_India_AH_Pet_Care</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPN_India_AH_Poultry_Planning_Month</fullName>
        <filterScope>Queue</filterScope>
        <label>CPN India - AH Poultry</label>
        <queue>CPN_India_AH_Poultry</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPN_India_AN_Dairy_Feed_Additives_Planning_Month</fullName>
        <filterScope>Queue</filterScope>
        <label>CPN India - AN Dairy - Feed Additives</label>
        <queue>CPN_India_AN_Dairy_Feed_Additives</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPN_India_AN_Feed_Additives_Planning_Month</fullName>
        <filterScope>Queue</filterScope>
        <label>CPN India - AN - Feed Additives</label>
        <queue>CPN_India_AN_Feed_Additives</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPN_India_AN_Poultry_Planning_Month</fullName>
        <filterScope>Queue</filterScope>
        <label>CPN India - AN - Poultry</label>
        <queue>CPN_India_AN_Poultry</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPN_India_IBG_TRADING_Planning_Month</fullName>
        <filterScope>Queue</filterScope>
        <label>CPN India - IBG TRADING</label>
        <queue>CPN_India_IBG_TRADING</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Planning Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning Months</pluralLabel>
    <recordTypes>
        <fullName>Plan_Day</fullName>
        <active>true</active>
        <description>Record Type for Plan Day which are related to Plan Month</description>
        <label>Plan Day</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plan_Month</fullName>
        <active>true</active>
        <description>Parent Record of Plan Day</description>
        <label>Plan Month</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ActivityEndDateLessThanStart</fullName>
        <active>true</active>
        <errorConditionFormula>if(  RecordType.Name=$Label.Cres_Plan_DayRecType &amp;&amp; Plan_Date__c&gt; Activity_End_Date__c,true,false)</errorConditionFormula>
        <errorMessage>Activity End Date should be greater than Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ActivityEndDateNotAllowed</fullName>
        <active>true</active>
        <errorConditionFormula>if(AND(!ISBLANK(Activity_End_Date__c) ,  RecordType.Name ==$Label.Cres_Plan_DayRecType ),if(OR(ISPICKVAL(First_Half__c,&apos;Leave&apos;) &amp;&amp; ISPICKVAL( Second_Half__c,&apos;Leave&apos;),(ISPICKVAL(First_Half__c,&apos;Training&apos;) &amp;&amp; ISPICKVAL(Second_Half__c,&apos;Training&apos;)) 
),false,true),false)</errorConditionFormula>
        <errorMessage>Activity End Date is allowed only if both first half and second half is either Leave/Training</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ActivityEndDateOutsideMonth</fullName>
        <active>true</active>
        <errorConditionFormula>if(and(!ISBLANK(Activity_End_Date__c ),month(Related_Planning_Month__r.Month_Start_Date__c)!= month( Activity_End_Date__c),RecordType.Name == $Label.Cres_Plan_DayRecType ),true,false)</errorConditionFormula>
        <errorMessage>Activity End Date should be within the planning month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ActivityEndDateReadOnly</fullName>
        <active>true</active>
        <errorConditionFormula>if(AND(RecordType.Name ==$Label.Cres_Plan_DayRecType,ISCHANGED( Activity_End_Date__c ),AND(OR(ISPICKVAL( First_Half__c,&apos;Training&apos;),ISPICKVAL( First_Half__c,&apos;Leave&apos;)),OR(ISPICKVAL( Second_Half__c,&apos;Training&apos;),ISPICKVAL( Second_Half__c,&apos;Leave&apos;)))),true,false)</errorConditionFormula>
        <errorMessage>Activity End Date Cannot be edited for Leave/Training.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ActivityEndDateRequired</fullName>
        <active>true</active>
        <description>Activity End Date is required if the Activity is Leave/Training</description>
        <errorConditionFormula>if(OR(AND(ISPICKVAL( First_Half__c ,&apos;Leave&apos;),ISPICKVAL( Second_Half__c ,&apos;Leave&apos;)),AND(ISPICKVAL( First_Half__c ,&apos;Training&apos;),ISPICKVAL( Second_Half__c ,&apos;Training&apos;)))&amp;&amp; ISBLANK( Activity_End_Date__c ) &amp;&amp; RecordType.Name ==$Label.Cres_Plan_DayRecType ,true,false)</errorConditionFormula>
        <errorMessage>Activity End Date is mandatory for Leave/Training Activities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ActivityRequired</fullName>
        <active>true</active>
        <description>First Half and Second Half of the Activity should be selected</description>
        <errorConditionFormula>if((OR(ISBLANK(text(First_Half__c)),ISBLANK( text(Second_Half__c))) &amp;&amp; RecordType.Name ==$Label.Cres_Plan_DayRecType ),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Please select First Half and Second Half Activities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ApproverMandatory</fullName>
        <active>true</active>
        <description>Status update to Submit for approval will be allowed to change if no of working days in a month equal to no of planned day in a month</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Submitted for Approval&apos;),OR(
Approver_1__c = NULL, Approver_2__c=NULL),RecordType.Name ==$Label.Cres_PlanMonthRecType)</errorConditionFormula>
        <errorMessage>ASM Notification and RSM Approval should be selected for submission</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Plan_Month</fullName>
        <active>true</active>
        <errorConditionFormula>if(ISNEW() &amp;&amp; RecordType.Name ==$Label.Cres_PlanMonthRecType &amp;&amp; month(today()) != 12, 
AND(Month_Index__c !=month(today()),Month_Index__c !=month(today())+1) || value(text(Plan_Year__c))!=YEAR(today()),
if(ISNEW() &amp;&amp; RecordType.Name ==$Label.Cres_PlanMonthRecType &amp;&amp; month(today()) = 12,if(Month_Index__c=12,value(text(Plan_Year__c))!=YEAR(today()),
if(Month_Index__c=1,value(text(Plan_Year__c))!=YEAR(today())+1,true))

,False) )</errorConditionFormula>
        <errorMessage>Invalid Year or Month Selected. Please select current month or next month for planning.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlanDayCannotBeWeekends</fullName>
        <active>true</active>
        <description>Cannot Create a Plan on Weekends</description>
        <errorConditionFormula>IF(AND( Related_Planning_Month__r.Working_Days_Per_week__c=5,OR(WEEKDAY(Plan_Date__c)=1,WEEKDAY(Plan_Date__c)=7),RecordType.Name ==$Label.Cres_Plan_DayRecType),TRUE,FALSE )</errorConditionFormula>
        <errorMessage>Cannot Create a Plan on Weekends</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlanDayOutsideMonth</fullName>
        <active>true</active>
        <errorConditionFormula>if(AND(Month( Related_Planning_Month__r.Month_Start_Date__c)!= month(Plan_Date__c), RecordType.Name==$Label.Cres_Plan_DayRecType ),true,false)</errorConditionFormula>
        <errorMessage>Please select a date within the planning month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlanDayRequired</fullName>
        <active>true</active>
        <errorConditionFormula>if(AND(ISBLANK(Plan_Date__c), RecordType.Name==$Label.Cres_Plan_DayRecType ),true,false )</errorConditionFormula>
        <errorMessage>Please select the Day</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlanMonthRequired</fullName>
        <active>true</active>
        <errorConditionFormula>if(and(RecordType.Name==&apos;Plan Month&apos;,ISBLANK(text( Month_Planned__c ))),true,false)</errorConditionFormula>
        <errorMessage>Please select the Month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlanYearRequired</fullName>
        <active>true</active>
        <errorConditionFormula>if(and(RecordType.Name==&apos;Plan Month&apos;,ISBLANK(text( Plan_Year__c ))),true,false)</errorConditionFormula>
        <errorMessage>Please select the Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Planned_Day_Should_not_be_Sunday</fullName>
        <active>false</active>
        <description>Planned Day should not be a Sunday.</description>
        <errorConditionFormula>IF(And( Related_Planning_Month__r.Working_Days_Per_week__c ==6,WEEKDAY(Plan_Date__c)=1,RecordType.Name ==$Label.Cres_Plan_DayRecType),TRUE,FALSE )</errorConditionFormula>
        <errorMessage>Planned Day Should not be Sunday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RouteNotAllowed</fullName>
        <active>true</active>
        <errorConditionFormula>if(AND(RecordType.Name ==$Label.Cres_Plan_DayRecType,!ISBLANK(Route__c),AND(CONTAINS($Label.Cres_Route_Not_RequiredCPNIndia
,text(First_Half__c)),CONTAINS($Label.Cres_Route_Not_RequiredCPNIndia
,text(Second_Half__c))
)),true,false)</errorConditionFormula>
        <errorMessage>Please do not enter any Route details for selected Activity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Route_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>if(AND(RecordType.Name ==$Label.Cres_Plan_DayRecType,ISBLANK(Route__c),OR(!CONTAINS($Label.Cres_Route_Not_RequiredCPNIndia
,text(First_Half__c)),!CONTAINS($Label.Cres_Route_Not_RequiredCPNIndia
,text(Second_Half__c))
)),true,false)</errorConditionFormula>
        <errorMessage>Route is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TargetRequired</fullName>
        <active>true</active>
        <description>Target is Required for all users</description>
        <errorConditionFormula>if(AND(ISBLANK(Target__c),RecordType.Name == $Label.Cres_PlanMonthRecType ),true,false)</errorConditionFormula>
        <errorMessage>Please select a Territory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WorkingDayValidationForApproval</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Submitted for Approval&apos;),Number_of_Working_Days__c &lt;&gt; Days_Planned__c 
,RecordType.Name ==$Label.Cres_PlanMonthRecType)</errorConditionFormula>
        <errorMessage>Planned Days and Working days  should be same for submission</errorMessage>
    </validationRules>
</CustomObject>